fix(lazy): animate preloader in not visible slides

--- a/src/modules/lazy/lazy.scss
+++ b/src/modules/lazy/lazy.scss
@@ -20,9 +20,6 @@
   border: 4px solid var(--swiper-preloader-color, var(--swiper-theme-color));
   border-radius: 50%;
   border-top-color: transparent;
-}
-
-.swiper-slide-visible .swiper-lazy-preloader {
   animation: swiper-preloader-spin 1s infinite linear;
 }
 
